--- a/i18n/zh-Hant.po
+++ b/i18n/zh-Hant.po
@@ -1,5 +1,5 @@
 msgid ""
-msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-11-04 11:45+0800\nPO-Revision-Date: 2025-11-22 22:59+0000\nLast-Translator: Gijs van Tulder <gijs@vantulder.net>\nLanguage-Team: Chinese (Traditional Han script) <https://hosted.weblate.org/projects/tessel/game/zh_Hant/>\nLanguage: zh-Hant\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=1; plural=0;\nX-Generator: Weblate 5.15-dev\n"
+msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-11-04 11:45+0800\nPO-Revision-Date: 2025-11-22 23:14+0000\nLast-Translator: Anonymous <noreply@weblate.org>\nLanguage-Team: Chinese (Traditional Han script) <https://hosted.weblate.org/projects/tessel/game/zh_Hant/>\nLanguage: zh-Hant\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=1; plural=0;\nX-Generator: Weblate 5.15-dev\n"
 
 #. js-lingui-explicit-id
 #: src/grid/atlas/AmmannBeenkerAtlas.ts:11
